--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@
 *.iml
 out
 gen
-balance/module/.DS_Store
-main
+#balance/module/.DS_Store
+#main
 /.idea/codeStyles/codeStyleConfig.xml
 /.idea/go_dev.iml
 /.idea/misc.xml
